enforce single instance of application prevent windows going offscreen and hide scrollbars

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -4,6 +4,11 @@
 		format('woff2');
 }
 
+::-webkit-scrollbar {
+	width: 0; /* Remove scrollbar space */
+	background: transparent; /* Optional: just make scrollbar invisible */
+}
+
 html {
 	height: 100%;
 	overflow: visible;
